src/objects/Preferences__c.object
<CustomObject>
    <fields>
        <fullName>Application_HMY__c</fullName>
        <label>Application HMY</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Applications</label>
        <referenceTo>Applications__c</referenceTo>
        <relationshipLabel>Preferences</relationshipLabel>
        <relationshipName>Preferences</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Preference_HMY__c</fullName>
        <label>Preference HMY</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_To_Boomi__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag is checked by Boomi to determine if a record is to be picked up and processed.</description>
        <inlineHelpText>If the box is checked, Boomi will pull the record on the next poll.  If the box is unchecked, Boomi will not pull the record.</inlineHelpText>
        <label>Send To Boomi</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>YARDI_Preference_Code__c</fullName>
        <label>YARDI Preference  Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <label>Preferences</label>
    <nameField>
        <label>Preference Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Preferences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>